--- a/cours/L1/Initiation web/TP/TP2/formationSciences.html
+++ b/cours/L1/Initiation web/TP/TP2/formationSciences.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="monstyle.css">
 </head>
 <body>
     <h1>Offre LMD dans le domaine Sciences et technologie à l'UFR Jean PERRIN de LENS</h1>
