--- a/cours/L1/Initiation web/TP/TP 3/exercice5.html
+++ b/cours/L1/Initiation web/TP/TP 3/exercice5.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>table de multplication</title>
-   
+    <style>
+        table, td, tr{
+            border: 1px solid;
+        }
+    </style>
 </head>
 <body>
-    <table border="1">
+    <table>
         <caption>Table de multplication</caption>
         <tr>
             <td>X</td><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td>
