--- a/cours/L1/Initiation web/TP/TP 3/liste.html
+++ b/cours/L1/Initiation web/TP/TP 3/liste.html
@@ -9,18 +9,19 @@
     <ol>
         <li><h2>moteur de recherche</h2>
             <ul>
-                <li><a href="google.com">google</a></li>
-                <li><a href="yahoo.com">yahoo</a></li>
-                <li><a href="bing.com">bing</a></li>
-            </ul>    
-            
-        <li><h2>navigateur web</h2> 
+                <li><a href="https://google.com">google</a></li>
+                <li><a href="https://yahoo.com">yahoo</a></li>
+                <li><a href="https://bing.com">bing</a></li>
+            </ul>
+        </li>
+        <li><h2>navigateur web</h2>
+
             <ul>
-                <li><img class="firefox" src='C:\Users\fabie\OneDrive\Documents\cours-1\cours\L1\Initiation web\TP\TP 3\logos\firefox.gif'></li>
-                <li><img class="chrome" src='C:\Users\fabie\OneDrive\Documents\cours-1\cours\L1\Initiation web\TP\TP 3\logos\chrome.gif'></li>
-                <li><img class="ie" src='C:\Users\fabie\OneDrive\Documents\cours-1\cours\L1\Initiation web\TP\TP 3\logos\ie.gif'></li>
-                <li><img class="safari" src='C:\Users\fabie\OneDrive\Documents\cours-1\cours\L1\Initiation web\TP\TP 3\logos\safari.gif'></li>
-                <li><img class="opera" src='C:\Users\fabie\OneDrive\Documents\cours-1\cours\L1\Initiation web\TP\TP 3\logos\opera.gif'></li>
+                <li><img class="firefox" src="C:/Users/fabie/Documents/firefox.gif" alt="logo firefox"></li>
+                <li><img class="chrome" src="C:/Users/fabie/Documents/chrome.gif" alt="loge chrome"></li>
+                <li><img class="ie" src="C:/Users/fabie/Documents/ie.gif" alt="logo internet explorer"></li>
+                <li><img class="safari" src="C:/Users/fabie/Documents/safari.gif" alt="logo safari"></li>
+                <li><img class="opera" src="C:/Users/fabie/Documents/opera.gif" alt="logo opera"></li>
             </ul>
         </li>
         <li>
@@ -35,6 +36,5 @@
             </ul>
         </li>
     </ol>
-        
 </body>
 </html>
