--- a/cours/L1/Initiation web/TP/TP 6/exercice 2.html
+++ b/cours/L1/Initiation web/TP/TP 6/exercice 2.html
@@ -25,11 +25,13 @@
         <li class="impairs">les tableau et les cellules de tableau ont une bordure(border-style)</li>
     </ul>
     <table>
-        <tbody>
+        <thead>
             <tr>
                 <th>couleur de fond des cellules d'en-tete: silver et texte en gras</th>
                 <th>idem</th>
             </tr>
+        </thead>
+        <tbody>
             <tr>
                 <td>texte des cellules de données alignéa droite</td>
                 <td>idem</td>
