--- a/cours/L1/Initiation web/TP/TP 7/public/nitro.html
+++ b/cours/L1/Initiation web/TP/TP 7/public/nitro.html
@@ -75,7 +75,7 @@
 	<table>
 		<thead>
 			<tr>
-				<th colspan="2">Nitroglycérine</th>
+				<td colspan="2">Nitroglycérine</td>
 			</tr>
 		</thead>
 
