--- a/cours/L1/Initiation web/SAE/her.html
+++ b/cours/L1/Initiation web/SAE/her.html
@@ -7,64 +7,18 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Recette de gateau</h1>
+    <h1>Recette de Cookies</h1>
     <div id="Sommaire">
         <ul><li class="Sommaire">Sommaire</li>
             <li class="Sommaire"><a href="#gateau_1">gateau chocolat</a></li>
-            <li class="Sommaire"><a href="#gateau_2">recette cookies</a></li>
-            <li class="Sommaire"><a href="#gateau_2">j ai pas encore trouvé</a></li>
+            <li class="Sommaire"><a href="#ingredients">ingredients</a></li>
+            <li class="Sommaire"><a href="#Recette">Recette</a></li>
             <li class="Sommaire">retour a la page principale</li>
         </ul>
     </div>
-    <div id="gateau1">
-        <h2 id="gateau_chocolat">Gateau Chocolat</h2>
-        <table>
-            <caption>ingrédients</caption>
-            <thead>
-                <tr><td></td>
-                    <td>pour 6 personnes</td>
-                    <td>pour 8 personnes</td>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Oeufs</td>
-                    <td>3</td>
-                    <td>4</td>
-                </tr>
-                <tr>
-                    <td>Farine</td>
-                    <td>50</td>
-                    <td>68</td>
-                </tr>
-                <tr>
-                    <td>Chocolat</td>
-                    <td>200</td>
-                    <td>265</td>
-                </tr>
-                <tr>
-                    <td>Beurre</td>
-                    <td>120</td>
-                    <td>160</td>
-                </tr>
-                <tr>
-                    <td>Sucre</td>
-                    <td>120</td>
-                    <td>160</td>
-                </tr>
-            </tbody>
-        </table>
-        <ol>
-            <li><p>Mettre le chocolat à fondre avec 2 c.à.s d'eau.</p></li>
-            <li><p>Mélanger le sucre et le beurre. Incorporer le chocolat. Ajouter les œufs, la farine</p></li>
-            <li><p>Mettre la pâte dans un moule en silicone ou recouvert de papier cuisson.</p></li>
-            <li><p>Enfourner à 210 °C pendant 15 à 20 minutes. Quand le dessus du gâteau a l'air croustillant, c'est que le gâteau est prêt !</p></li>
-        </ol>
-    </div>
     <div id="cookies">
-        <h2>Cookies</h2>
         <table>
-            <caption>ingrédients</caption>
+            <caption id="ingredients">ingrédients</caption>
             <thead>
                 <tr><td></td>
                     <td>pour 4 personnes</td>
@@ -104,6 +58,7 @@
                 </tr>
             </tbody>
         </table>
+        <h2 id="Recette">Recette</h2>
         <ol>
             <li><p>Détailler le chocolat en pépites.</p></li>
             <li><p>Préchauffer le four à 180°C (thermostat 6). Dans un saladier, mettre 75 g de beurre, le sucre, l'oeuf entier, la vanille et mélanger le tout avec une cuillère en bois.</p></li>
