update SAE Web + TP9 langage C

--- a/cours/L2/Semestre 3/WEB/SAE/SIAM.html
+++ b/cours/L2/Semestre 3/WEB/SAE/SIAM.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
-<body>
-    <a href="plateau.html" class="bouton-lien">Commencer une Partie</a>
+<body id="main">
+        <a id="boutton_play" href="plateau.html" class="bouton-lien">Commencer une Partie</a>
 </body>
 </html>
