--- a/cours/L2/Semestre 3/WEB/SAE/plateau.html
+++ b/cours/L2/Semestre 3/WEB/SAE/plateau.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jeu du SIAM</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
-<body>
+<body id="plateau">
     <p>fhryzbgerojf</p>
 </body>
 </html>
