SAE Web + SAE algo3

--- a/cours/L2/Semestre 3/WEB/SAE/plateau.html
+++ b/cours/L2/Semestre 3/WEB/SAE/plateau.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
 </head>
-<body id="plateau">
-    <p>fhryzbgerojf</p>
+<body id="Jeu">
+    <div id="plateau"></div>
 </body>
 </html>
